# lfi-rewriter

./: .gitignore  README.md  meson.build
lfi-postlink/: amd64.c  main.c  meson.build
lfi-rewrite/: args.h  main.c  meson.build
lfi-rewrite/amd64/: amd64.h  loads.leg  special.leg
lfi-rewrite/arm64/: addr.leg  arm64.h  branch.leg  common.leg  flags.c  guardelim.leg  meter.leg  poc.leg  special.leg  stores.leg  syscall.leg  tls.leg
lfi-rewrite/riscv64/: addr.leg  branch.leg  common.leg  display.c  flags.c  loads.leg  meson.build  riscv64.c  riscv64.h  special.leg  syscall.leg  tls.leg
lfi-rewrite/test/: meson.build  test.s
lfi-rewrite/test/amd64/: branch.s  bundle16.s  decl.s  ldst.s  meter.s  meter_timer.s  mod.s  nosegue.s  poc.s  storesonly.s  variable.s
lfi-rewrite/test/arm64/: arith.s  br.s  decl.s  guardelim.s  ldst.s  meter.s  meter_fp.s  meter_timer.s  poc.s  storesonly.s  syscall.s  sysexternal.s  tls.s
lfi-rewrite/test/riscv64/: arith.s  br.s  bundle.s  ld.s  ldst.s  storesonly.s  syscall.s  tls.s
src/: main.c  meson.build
